Erste angepasste Version für OSDE (Working Title)

--- a/Vereinssatzung.tex
+++ b/Vereinssatzung.tex
@@ -2,6 +2,7 @@
 
 \usepackage[utf8]{inputenc}
 \usepackage[german]{babel}
+
 \usepackage{scrjura}
 \usepackage{paralist}
 \usepackage{eurosym}
@@ -29,7 +30,7 @@
 \addtokomafont{section}{\rmfamily}
 \addtokomafont{contract.Paragraph}{\rmfamily}
 
-\newcommand{\VereinsName}{DebConf}
+\newcommand{\VereinsName}{OSDE}
 
 \begin{document}
 
@@ -38,7 +39,7 @@
 \title{Satzung des Vereins "`\VereinsName\ [e.V.]"'}
 \date{}
 \author{}
-\def\fassungsdatum{10.\ August 2014}
+\def\fassungsdatum{25.\ November 2014}
 
 \begin{center}
   \LARGE \thetitle
@@ -52,58 +53,61 @@
 \clearscrheadfoot
 \ofoot{\footnotesize Seite \thepage\ von \pageref{TotPages}}
 
-{\footnotesize Diese Vereinssatzung wurde am 3.\ Mai 2014 errichtet und in den
-  wiederaufgenommenen \\ Gründungsversammlungen am 18.\ Juni 2014 und am 10.\
-  August 2014 geändert.\\ Sie umfaßt \pageref{TotPages} numerierte Seiten,
-  inklusive dieser.}
+{\footnotesize Diese Vereinssatzung wurde am ??.\ ??.\ 2014 in der Versammlung
+  zur Gründung des Vereins "`\VereinsName\ [e.V.]"\ offiziell errichtet. Sie
+  umfasst \pageref{TotPages} numerierte Seiten, inklusive dieser.}
 
 \bigskip
 
 \section*{Präambel}\enlargethispage{\textheight}
 \small
 
-Das Debian-Projekt ist ein nichtkommerzielles und anbieterunabhängiges
-Projekt, welches von ehrenamtlichen Mitgliedern getragen wird. Es verfolgt als
-Ziel die gemeinschaftliche Entwicklung, Pflege und Verbesserung eines Freien
-Betriebs\-systems und Freier Software im Allgemeinen. Freie Software ist nicht
-nur kostenlos; sie kann auch von jedermann nach Belieben eingesetzt, erforscht,
-verändert und verbreitet werden. Dieser freiheitliche Grundsatz ist im
-Debian-Gesellschaftsvertrag und in der Verfassung des Debian-Projekts verankert
-und geht zurück auf den Grundgedanken des freien Austauschs von Wissen und
-Ideen, wie er traditionell im Feld der Wissenschaft zu finden ist. Software
-ist, wie auch Gedanken, nichtstoff\/lich und somit verlustfrei kopierbar. Das
-Weiterreichen dient einem evolutionären Prozeß, über den Ideen und Software
-weiterentwickelt werden.
+OpenStack ist ein universelles Betriebssystem für Cloud-Computing-Umgebungen
+und mittlerweile das größte Projekt seiner Art. Entwickler in aller Welt
+beteiligen sich aktiv an der Weiterentwicklung der Software, die pro Jahr
+zwei neue Versionen veröffentlicht. Der Fokus der Umgebung liegt dabei ganz
+eindeutig auf Skalierbarkeit: OpenStack gibt Admins Werkzeuge an die Hand,
+die den Aufbau und den Betrieb großer Computing-Umgebungen vereinfachen
+und bequem werden lassen.
 
-Mehr als Tausend Debian-Entwickler arbeiten seit den Ursprüngen des Projekts in
-1993 weltweit zusammen und insbesondere in Deutschland findet sich ein starker
-Un\-ter\-stüt\-zer\-kreis. Unser Betriebs\-system und unsere Software wird von
-vielen Firmen und etlichen öffentlichen Einrichtungen, wie z.B.\ beim
-Bundesamt für Sicherheit und Informationstechnik, in der Stadtverwaltung
-München, oder in Schulen in Hamburg und Rheinland-Pfalz eingesetzt.
+Mittlerweile hat OpenStack weltweit eine große Fan-Gemeinde. Das Projekt hat
+insbesondere dem "`User Group"'-Prinzip neues Leben eingehaucht, indem es die
+OpenStack-Entwickler und die Administratoren von OpenStack-Clouds regelmäßig
+bei "`Meetups"' zusammen bringt. Treffen dieser Art bieten die Möglichkeit
+zum Austausch über verschiedene Themen, die mit OpenStack zu tun haben.
 
-Das Debian-Projekt richtet seit dem Jahr 2000 die "`DebConf"' aus, eine
-jährliche Konferenz, die Entwicklern und Benutzern eine Plattform bietet, um
-die Entwicklung des Betriebs\-systems voranzutreiben und über Anforderungen und
-Lösungen zu diskutieren. Neben Workshops und Vorträgen nutzen Entwickler die
-Möglichkeit, gemeinsam an der Software zu arbeiten, wobei die Grenzen zwischen
-Entwicklern und Benutzern nahezu verschwinden. Da die Kommunikation und
-Koordination ansonsten primär über das Internet erfolgt, ist diese Konferenz
-für das Projekt und seine Teilnehmer nachweislich von hoher Bedeutung und
-trägt maßgeblich zum Fortschritt und zum Erfolg des Betriebs\-systems bei. Die
-Teilnahme an der DebConf ist kostenlos möglich und alle Organisatoren und
-Helfer arbeiten ehrenamtlich.
+Neben dem größten Event dieser Art, dem halbjährlich stattfindenden OpenStack
+Summit, organisieren Mitglieder der OpenStack-Gemeinschaft regelmäßig auch
+regionale Events überall in der Welt. Die lokalen Meetups bieten vor Ort
+die Möglichkeit, sich über aktuellen Entwicklungen rund um OpenStack zu
+informieren, eigene Entwicklungen und Produkte vorzustellen und mit anderen
+OpenStack-Begeisterten Wissen auszutauschen. Für den deutschen Sprachraum
+(DACH) haben bisher außerdem zwei überregionale Events stattgefunden, die
+als "`OpenStack DACH Tag"' jeweils zusammen mit dem LinuxTag in Berlin in
+den Jahren 2013 und 2014 stattgefunden haben.
 
-Vor allem orts- und landesansässigen Benutzern und Entwicklern wird während der
-Konferenz die Möglichkeit gegeben, das Projekt und die internationalen
-Teilnehmer besser kennenzulernen, was die zukünftige, weltweit verteilte
-Zusammenarbeit im Internet stark vereinfacht bzw.\ erst ermöglicht. Moderne
-Video-Technik in Verbindung mit Echtzeit-Kommunikation ermöglicht zudem
-weltweite Teilnahme an Vorträgen und Diskussionen. Videoaufnahmen aller
-Vorträge stehen auch nach der Konferenz öffentlich zur kostenfreien Verfügung.
+Die Möglichkeit, die Veranstaltung zusammen mit dem LinuxTag durchzuführen,
+entfällt allerdings im Jahre 2015, weil der LinuxTag nicht wie gewohnt
+stattfindet. Viele Mitglieder der deutschen OpenStack-Gemeinschaft sind
+sich jedoch darin einig, dass es auch 2015 wieder eine entsprechende
+Veranstaltung in der DACH-Region rund um OpenStack geben sollte. Sie
+gründen deshalb den \VereinsName\ e.V., der als juristische Person auf der
+einen Seite als Organisator eines solchen Events (und ggf. weiterer
+lokaler Events) mit allen Rechten und Pflichten auftreten kann, der aber
+andererseits auch in der Lage ist, Spenden für die Durchführung eben jener
+Veranstaltungen zu sammeln.
 
-Im Sommer 2015 wird dieser Verein die DebConf erstmals in Deutschland
-ausrichten.
+Als Verein ist \VereinsName\ e.V. auch an demokratische Prinzipien gebunden
+und unabhängig von einzelnen Unternehmen. Das stellt sicher, dass etwaige
+Veranstaltungen wie der "`OpenStack DACH Tag"' eine offene Plattform für alle
+interessierten Unternehmen bleiben, statt zur "`Hausmesse"' einzelner Firmen
+zu werden. Die Gründungsmitglieder von \VereinsName\ e.V. halten ausdrücklich
+fest, dass dies für sie eine der Hauptmotivationen für die Gründung des
+Vereins darstellt.
+
+Dieser Satzung liegt die Satzung des "`DebConf e.V."' zugrunde, die unter
+den Bedingungen der CC-by-SA-Lizenz 4.0 von Martin F. Krafft veröffentlicht
+worden ist.
 
 \normalsize
 
@@ -118,9 +122,9 @@ Der Verein führt den Namen "`\VereinsName"'; nach der beabsichtigten
 Eintragung in das Vereinsregister mit dem Zusatz "`e.V."' (fortan: der
 Verein).
 
-Der Verein hat seinen Sitz in München.
+Der Verein hat seinen Sitz in Berlin.
 
-Gerichtsstand ist München.
+Gerichtsstand ist Berlin.
 
 Das Geschäftsjahr ist das Kalenderjahr. Der Zeitraum von der Gründung des
 Vereins bis zum Jahresende bildet ein Rumpfgeschäftsjahr.
@@ -130,12 +134,14 @@ Vereins bis zum Jahresende bildet ein Rumpfgeschäftsjahr.
 \parnumberfalse
 
 \label{Zweck}
-Zweck des Vereins ist die Förderung von Volksbildung.
+Zweck des Vereins ist die Förderung von Volksbildung. Insbesondere geht es
+dem Verein darum, durch die Unterstützung entsprechender Veranstaltungen
+bei der Vermittlung von Wissen rund um das Thema OpenStack aktiv zu sein.
 
 Der Zweck des Vereins wird insbesondere durch die Organisation von öffentlich
-zu\-gäng\-li\-chen und kostenfreien Veranstaltungen verwirklicht, die das
-Betriebs\-system oder andere Projekte des Debian-Projekts der Allgemeinheit
-näher bringen und somit der Volksbildung dienen, wie z.B.
+zu\-gäng\-li\-chen Veranstaltungen verwirklicht, die OpenStack selbst oder
+mit OpenStack in Verbindung stehende Projekte der Allgemeinheit näher
+bringen und somit der Volksbildung dienen, wie z.B.
 
 \begin{compactitem}
   \item Konferenzen,
@@ -143,14 +149,9 @@ näher bringen und somit der Volksbildung dienen, wie z.B.
   \item Lehrgänge und andere Weiterbildungsangebote.
 \end{compactitem}
 
-Wenn möglich sollen Vorträge in Echtzeit übertragen werden und Interessenten
-weltweit mit Hilfe von Kommunikationsmedien die entfernte Teilnahme ermöglicht
-werden. Video-Materialien werden zudem nach der Konferenz öffentlich und
-kostenfrei zur Verfügung gestellt, um den wissenschaftlichen Mehrwert auch
-über die Konferenz hinaus zu gewährleisten.
-
-Es wird auch das Ziel verfolgt, das traditionell von Männern besiedelte Feld
-der Software-Entwicklung für Frauen zugänglicher zu machen.
+Wenn möglich stellt der Verein Video-Materialien seiner Veranstaltungen
+öffentlich und kostenfrei zur Verfügung, um den wissenschaftlichen wie
+kulturellen Mehrwert auch über die Konferenz hinaus zu gewährleisten.
 
 \Paragraph{title=Gemeinnützigkeit}\label{Gemeinnuetzigkeit}
 
@@ -159,6 +160,15 @@ Sinne des Abschnitts "`Steuerbegünstigte Zwecke"' der Abgabenordnung.
 
 Der Verein ist selbstlos tätig; er ist konfessionell und parteipolitisch
 neutral. Er verfolgt nicht in erster Linie eigenwirtschaftliche Zwecke.
+
+Dem Verein stehen folgende Mittel zur Verfügung:
+
+\begin{compactitem}
+  \item Beiträge der Mitglieder,
+  \item Zuwendungen und Schenkungen,
+  \item Vermögen und
+  \item seine Erträge aus Ergebnissen der Vereinsarbeit.
+\end{compactitem}
 
 Die Mittel des Vereins werden ausschließlich und unmittelbar zu den
 satzungsgemäßen Zwecken verwendet. Die Mitglieder erhalten als solche
@@ -177,10 +187,10 @@ erfolgt keine Rückerstattung etwa eingebrachter Vermögenswerte.
 Eine Änderung des Vereinszwecks darf nur innerhalb des von \ref{Zweck}
 gegebenen Rahmens erfolgen.
 
-Bei der Auf\/lösung des Vereins oder bei Wegfall steuerbegünstigter Zwecks
-fällt das Vereinsvermögen an eine juristische Person des öffentlichen Rechts
-oder eine andere steuerbegünstigete Körperschaft zwecks Verwendung für die
-Förderung der Bildung im Sinne dieser Satzung.
+Bei der Auf\/lösung des Vereins oder beim Wegfall des steuerbegünstigten
+Zwecks fällt das Vereinsvermögen an eine juristische Person des öffentlichen
+Rechts oder eine andere steuerbegünstigete Körperschaft zwecks Verwendung
+für die Förderung der Bildung im Sinne dieser Satzung.
 
 \Paragraph{title=Mitgliedschaft}
 
@@ -203,10 +213,12 @@ um den Verein oder um die von ihm verfolgten satzungsgemäßen Zwecke erworben
 haben, zu Ehrenmitgliedern ernennen. Ehrenmitglieder haben alle Rechte eines
 aktiven Mitglieds. Sie sind von Beitragsleistungen befreit.
 
-\SubParagraph{title=Finanzieller Beitrag}
+\SubParagraph{title=Jahresbeitrag}
 
-Die Mitgliederversammlung kann beschließen, finanzielle Mitgliedsbeiträge zu
-erheben und hierzu eine Beitragsordnung erlassen.
+Der Verein erhebt einen Jahresbeitrag, der durch die Mitgliederversammlung
+per Beitragsordnung festgesetzt wird und für das jeweilige Kalenderjahr in
+voller Höhe im Voraus zu zahlen ist. Bei einem Eintritt im Laufe eines
+Kalenderjahres ist der Jahresbeitrag in voller Höhe zu entrichten.
 
 Im begründeten Einzelfall kann für ein Mitglied durch Vorstandsbeschluß ein
 von der Beitragsordnung abweichender, niedrigerer Beitrag festgesetzt werden.
@@ -281,7 +293,7 @@ unterliegen:
   \item die Auf\/lösung des Vereins.
 \end{compactenum}
 
-Die ordentliche Mitgliederversammlung findet alle zwei Jahre statt.
+Die ordentliche Mitgliederversammlung findet jedes Jahr statt.
 Außerordentliche Mitgliederversammlungen werden auf Beschluß des Vorstandes
 abgehalten, wenn die Interessen des Vereins dies erfordern, oder wenn
 mindestens ein Zehntel der Mitglieder dies unter Angabe des Zwecks in Textform
@@ -413,25 +425,27 @@ Im Übrigen wird das Verfahren durch Vorstandsbeschluß festgelegt.
 
 \Paragraph{title=Der Vorstand}
 
-Der Vorstand besteht aus drei Mitgliedern:
+Der Vorstand besteht aus fünf Mitgliedern:
 \begin{compactenum}[\hspace{2em}1.]
   \item dem/der Vorsitzenden,
-  \item dem/der stellvertretenden Vorsitzenden und Schriftführer/-in,
-  \item dem/der Kassenwart/-wärtin.
+  \item dem/der stellvertretenden Vorsitzenden
+  \item dem/der Schriftführer/-in,
+  \item dem/der Kassenwart/-wärtin,
+  \item dem/der stellvertretenden Kassenwart/-wärtin.
 \end{compactenum}
 
 Sind zwei oder mehr Vorstandsmitglieder dauernd an der Ausübung ihres Amtes
 gehindert, so sind unverzüglich Nachwahlen anzuberaumen.
 
-Die Amtsdauer der Vorstandsmitglieder beträgt zwei Jahre. Wiederwahl ist
-zulässig. Die jeweils amtierenden Vorstandsmitglieder bleiben nach Ablauf
+Die Amtsdauer der Vorstandsmitglieder beträgt ein Jahr. Wiederwahl ist
+zulässig. Die jeweils amtierenden Vorstandsmitlgieder bleiben nach Ablauf
 ihrer Amtszeit im Amt, bis Nachfolger gewählt sind.
 
 Der Vorstand beschließt über alle Vereinsangelegenheiten, soweit sie nicht
 eines Beschlusses der Mitgliederversammlung bedürfen. Er führt die Beschlüsse
 der Mitgliederversammlung aus. Beschlüsse des Vorstandes müssen mit
-Zweidrittelmehrheit gefaßt werden. Der Vorstand ist beschlußfähig, wenn
-mindestens zwei Mitglieder anwesend sind.
+einfacher Mehrheit gefaßt werden. Der Vorstand ist beschlußfähig, wenn
+mindestens drei Mitglieder anwesend sind.
 
 \SubParagraph{title=Vertretung}
 
@@ -444,11 +458,17 @@ mit einem finanziellen Volumen von über \EUR{2.000}, sowie der Einstellung und
 Entlassung von Angestellten und der Aufnahme von Krediten ist nur eine
 gemeinschaftliche Vertretung zulässig.
 
-Der Kassenwart verwaltet die Vereinskasse und führt Buch über die Einnahmen
-und Ausgaben des Vereins. Gegenüber Banken erhält er/sie hierfür entsprechende
-Handlungsvollmachten. Er/sie ist berechtigt, Zahlungsanweisungen entsprechend
-den Beschlüssen des Vorstandes oder der Mitgliederversammlung zu
+Der/die Kassenwart/-wärtin verwaltet die Vereinskasse und führt Buch über die
+Einnahmen und Ausgaben des Vereins. Gegenüber Banken erhält er/sie hierfür
+entsprechende Handlungsvollmachten. Er/sie ist berechtigt, Zahlungsanweisungen
+entsprechend den Beschlüssen des Vorstandes oder der Mitgliederversammlung zu
 unterzeichnen.
+
+Der/die stellvertretende Kassenwart/-wärtin vertritt den/die Kassenwart/-wärtin
+auf dessen/deren Bitte hin oder in Fällen, in denen der/die Kassenwart/-wärtin
+an der Ausübung der eigenen Pflichten gehindert ist. Ihm/ihr kommen in der
+Ausübung seiner/ihrer Tätigkeit die gleichen Rechte und Pflichten zu, die auch
+der/die Kassenwart/-wärtin hat.
 
 \SubParagraph{title=Vorstandssitzungen und -beschlüsse}
 
@@ -527,7 +547,7 @@ seine Organe und Erfüllungs- und Verrichtungsgehilfen weder gesetzliche noch
 vertragliche Haftung.
 
 Dieser Haftungsauschluß gilt nicht bei Vorliegen von Vorsatz oder grober
-Fahr\-läß\-ig\-keit.
+Fahr\-läss\-ig\-keit.
 
 \end{contract}
 
@@ -536,30 +556,30 @@ Fahr\-läß\-ig\-keit.
 \vspace{3em}
 
 \rule{6cm}{0.4pt} \\
-\noindent Michael Banck \\
+\noindent Martin Gerhard Loschwitz \\
 \vspace{2em}
 
 \rule{6cm}{0.4pt} \\
-\noindent Rene Engelhard \\
+\noindent N.N. \\
 \vspace{2em}
 
 \rule{6cm}{0.4pt} \\
-\noindent Richard Hartmann \\
+\noindent N.N. \\
 \vspace{2em}
 
 \rule{6cm}{0.4pt} \\
-\noindent Philipp Hug \\
+\noindent N.N. \\
 \vspace{2em}
 
 \rule{6cm}{0.4pt} \\
-\noindent Jörg Jaspert \\
+\noindent N.N. \\
 \vspace{2em}
 
 \rule{6cm}{0.4pt} \\
-\noindent Martin Krafft \\
+\noindent N.N. \\
 \vspace{2em}
 
 \rule{6cm}{0.4pt} \\
-\noindent Margarita Manterola
+\noindent N.N.
 
 \end{document}
