Erlaube, für einzelne Veranstaltungen einen Unkostenbeitrag zu erheben

--- a/Vereinssatzung.tex
+++ b/Vereinssatzung.tex
@@ -149,9 +149,13 @@ bringen und somit der Volksbildung dienen, wie z.B.
   \item Lehrgänge und andere Weiterbildungsangebote.
 \end{compactitem}
 
-Wenn möglich stellt der Verein Video-Materialien seiner Veranstaltungen
-öffentlich und kostenfrei zur Verfügung, um den wissenschaftlichen wie
-kulturellen Mehrwert auch über die Konferenz hinaus zu gewährleisten.
+Der Verein erhebt für seine Veranstaltungen grundsätzlich keine Teilnahmegebühr.
+Es steht ihm jedoch frei, für einzelne Events einen adäquaten Beitrag zur 
+Abdeckung von Unkosten von den Teilnehmern seiner Veranstaltungen einzufordern.
+
+Wenn technisch möglich stellt der Verein Video-Materialien seiner Veranstaltungen
+öf\-fent\-lich und kostenfrei zur Verfügung, um den wissenschaftlichen wie kulturellen
+Mehrwert auch über die Konferenz hinaus zu gewährleisten.
 
 \Paragraph{title=Gemeinnützigkeit}\label{Gemeinnuetzigkeit}
 
