Änderung des Working Titles in "OpenStack DACH"

--- a/Vereinssatzung.tex
+++ b/Vereinssatzung.tex
@@ -30,7 +30,7 @@
 \addtokomafont{section}{\rmfamily}
 \addtokomafont{contract.Paragraph}{\rmfamily}
 
-\newcommand{\VereinsName}{OSDE}
+\newcommand{\VereinsName}{OpenStack DACH}
 
 \begin{document}
 
@@ -39,7 +39,7 @@
 \title{Satzung des Vereins "`\VereinsName\ [e.V.]"'}
 \date{}
 \author{}
-\def\fassungsdatum{25.\ November 2014}
+\def\fassungsdatum{26.\ November 2014}
 
 \begin{center}
   \LARGE \thetitle
