Kleinere Veränderungen an der Präambel, die nicht sinnändernd sind

--- a/Vereinssatzung.tex
+++ b/Vereinssatzung.tex
@@ -100,10 +100,10 @@ Veranstaltungen zu sammeln.
 Als Verein ist \VereinsName\ e.V. auch an demokratische Prinzipien gebunden
 und unabhängig von einzelnen Unternehmen. Das stellt sicher, dass etwaige
 Veranstaltungen wie der "`OpenStack DACH Tag"' eine offene Plattform für alle
-interessierten Unternehmen bleiben, statt zur "`Hausmesse"' einzelner Firmen
-zu werden. Die Gründungsmitglieder von \VereinsName\ e.V. halten ausdrücklich
-fest, dass dies für sie eine der Hauptmotivationen für die Gründung des
-Vereins darstellt.
+interessierten Unternehmen und Organisationen bleiben, statt zur "`Hausmesse"'
+einzelner Firmen zu werden. Die Gründungsmitglieder von \VereinsName\ e.V.
+halten ausdrücklich fest, dass dies für sie eine der Hauptmotivationen für die
+Gründung des Vereins darstellt.
 
 Dieser Satzung liegt die Satzung des "`DebConf e.V."' zugrunde, die unter
 den Bedingungen der CC-by-SA-Lizenz 4.0 von Martin F. Krafft veröffentlicht
@@ -150,7 +150,7 @@ bringen und somit der Volksbildung dienen, wie z.B.
 \end{compactitem}
 
 Der Verein erhebt für seine Veranstaltungen grundsätzlich keine Teilnahmegebühr.
-Es steht ihm jedoch frei, für einzelne Events einen adäquaten Beitrag zur 
+Es steht ihm jedoch frei, für einzelne Events einen adäquaten Beitrag zur
 Abdeckung von Unkosten von den Teilnehmern seiner Veranstaltungen einzufordern.
 
 Wenn technisch möglich stellt der Verein Video-Materialien seiner Veranstaltungen
