Änderungen hinsichtlich der Struktur des Vorstands und Formalia
Entfernung des stellv. Kassenwartes; Hinzufügen möglicher Beisitzer
sowie das Einfügen des Erlöschens der Mitgliedschaft.

--- a/Vereinssatzung.tex
+++ b/Vereinssatzung.tex
@@ -6,6 +6,7 @@
 \usepackage{scrjura}
 \usepackage{paralist}
 \usepackage{eurosym}
+\usepackage{totpages}
 
 %\usepackage{draftwatermark}
 %\SetWatermarkText{Entwurf 2014-05-18}
@@ -150,8 +151,8 @@ bringen und somit der Volksbildung dienen, wie z.B.
 \end{compactitem}
 
 Der Verein erhebt für seine Veranstaltungen grundsätzlich keine Teilnahmegebühr.
-Es steht ihm jedoch frei, für einzelne Events einen adäquaten Beitrag zur
-Abdeckung von Unkosten von den Teilnehmern seiner Veranstaltungen einzufordern.
+Es steht ihm jedoch frei, für einzelne Veranstaltungen einen adäquaten Beitrag zur
+Abdeckung von Unkosten von den Teilnehmern seiner Veranstaltungen einzuheben.
 
 Wenn technisch möglich stellt der Verein Video-Materialien seiner Veranstaltungen
 öf\-fent\-lich und kostenfrei zur Verfügung, um den wissenschaftlichen wie kulturellen
@@ -237,29 +238,57 @@ Die Mitglieder sind verpflichtet, die satzungsgemäßen Zwecke des Vereins zu
 unterstützen und zu fördern. Sie sind ebenso verpflichtet, die festgesetzten
 Beiträge zu zahlen.
 
+Jedes einzelne Mitglied hat Sorge dafür zu tragen, dass dem Vorstand zu jeder
+Zeit eine zustellungsfähige Adresse des Mitglieds bekannt ist.
+
 \SubParagraph{title=Beendigung der Mitgliedschaft}
 
-Die Mitgliedschaft endet durch Austrittserklärung, durch Tod von natürlichen
-Personen oder durch Auf\/lösung und Erlöschung von juristischen Personen,
-Handelsgesellschaften, nicht rechtsfähigen Vereinen sowie Anstalten und
-Körperschaften des öffentlichen Rechts oder durch Ausschluß; die
-Beitragspflicht für das laufende Geschäftsjahr bleibt hiervon unberührt.
+Die Mitgliedschaft endet durch
 
-Der Austritt wird durch schriftliche Willenserklärung in Textform
-ge\-gen\-über dem Vorstand vollzogen.
+\begin{compactitem}
+  \item die Austrittserklärung des Mitglieds unter Einhaltung einer Frist von
+  drei Monaten zum Ende des Kalenderjahres, wobei diese dem Vorstand in Textform
+  (z.B. mittels E-Mail, Brief oder Fax) erklärt werden muss; den Nachweis über
+  den Eingang der Kündigung beim Vorstand führt der Absender.
+  \item Tod von natürlichen Personen.
+  \item Auf\/lösung und Erlöschung von juristischen Personen, Handelsgesellschaften,
+  nicht rechtsfähigen Vereinen sowie Anstalten und Körperschaften des öffentlichen
+  Rechts.
+  \item Ausschluss.
+\end{compactitem}
 
-\SubParagraph{title=Ausschluß eines Mitglieds}
+Die Beitragspflicht für das laufende Geschäftsjahr bleibt hiervon unberührt.
 
-Ein Mitglied kann durch Beschluß des Vorstandes ausgeschlossen werden, wenn es
-das Ansehen des Vereins schädigt, seinen Beitragsverpflichtungen nicht
-nachkommt oder wenn ein sonstiger wichtiger Grund vorliegt. Der Vorstand muß
-dem auszuschließenden Mitglied den Beschluß in Textform unter Angabe von
-Gründen mitteilen und ihm/ihr auf Verlangen eine Anhörung gewähren.
+Der Vorstand kann die Mitgliedschaft eines Mitglieds für erloschen erklären, wenn
 
-Gegen den Beschluß des Vorstandes ist die Anrufung der Mitgliederversammlung,
-auch durch das auszuschließende Mitglied, zu\-läs\-sig.
+\begin{compactitem}
+  \item das Mitglied den per Beitragsordnung festgesetzten Jahresbeitrag
+  drei Monate nach Beginn des Geschäftsjahres noch nicht gezahlt hat und
+  \item trotz Mahnung durch eingeschriebenen Brief, der den Hinweis auf
+  das Erlöschen der Mitgliedschaft enthalten muss,
+  \item der fällige Betrag nicht innerhalb eines Monats beim Verein
+  eingeht.
+\end{compactitem}
 
-Bei einer Abstimmung über den Beschluß bzw.\ den Ausschluß hat das betroffene
+Diese Regelung gilt sinngemäß auch für neue Vereinsmitglieder, wobei die
+dreimonatige Frist hier mit dem Tag der Annahme der Beitrittserklärung
+durch den Vorstand beginnt.
+
+Erlischt die Mitgliedschaft eines Mitglieds, so hebt dies nicht die
+Verpflichtung zur Zahlung fälliger Beiträge auf.
+
+\SubParagraph{title=Ausschluss eines Mitglieds}
+
+Ein Mitglied kann durch Beschluss des Vorstandes ausgeschlossen werden, wenn es
+das Ansehen des Vereins schädigt, die Satzung des Vereins i.d.g.F. vorsätzlich
+verletzt oder wenn ein sonstiger wichtiger Grund vorliegt. Der Vorstand muß
+dem auszuschließenden Mitglied den Beschluss in Textform unter Angabe von Gründen
+mitteilen.
+
+Gegen seinen Ausschluss kann das Mitglied mit aufschiebender Wirkung die nächste
+Mitgliederversammlung anrufen, die eine endgültige Entscheidung trifft.
+
+Bei einer Abstimmung über den Beschluss bzw.\ den Ausschluss hat das betroffene
 Mitglied keine Stimme. Sollen mehrere Mitglieder ausgeschlossen werden, so ist
 über jedes einzeln abzustimmen.
 
@@ -275,7 +304,7 @@ Die Organe des Vereins sind
 
 \Paragraph{title=Mitgliederversammlung}\label{Mitgliederversammlung}
 
-Oberstes Beschlußorgan ist die Mitgliederversammlung. Ihrer Beschlußfassung
+Oberstes Beschlussorgan ist die Mitgliederversammlung. Ihrer Beschlussfassung
 unterliegen:
 
 \begin{compactenum}[\hspace{2em}1.]
@@ -293,15 +322,14 @@ unterliegen:
   \item Entscheidungen über Beschwerden gegen Ablehnungen von
     Aufnahmeanträgen,
   \item die Ernennung von Ehrenmitgliedern,
-  \item Ausschluß eines Vereinsmitglieds,
+  \item Ausschluss eines Vereinsmitglieds,
   \item die Auf\/lösung des Vereins.
 \end{compactenum}
 
-Die ordentliche Mitgliederversammlung findet jedes Jahr statt.
-Außerordentliche Mitgliederversammlungen werden auf Beschluß des Vorstandes
-abgehalten, wenn die Interessen des Vereins dies erfordern, oder wenn
-mindestens ein Zehntel der Mitglieder dies unter Angabe des Zwecks in Textform
-beanträgt.
+Die ordentliche Mitgliederversammlung findet jedes Jahr statt. Außerordentliche
+Mitgliederversammlungen werden auf Beschluss des Vorstandes abgehalten, wenn die
+Interessen des Vereins dies erfordern, oder wenn mindestens ein Zehntel der
+Mitglieder dies unter Angabe des Zwecks in Textform beantragt.
 
 Die Mitgliederversammlung kann sich eine Geschäftsordnung geben.
 
@@ -328,16 +356,17 @@ anwesend, bestimmt die Mitgliederversammlung den Versammlungsleiter.
 
 Der Protokollführer wird vom Versammlungsleiter bestimmt.
 
-\SubParagraph{title=Beschlußfähigkeit und Mehrheitserfordernisse}
+\SubParagraph{title=Beschlussfähigkeit und Mehrheitserfordernisse}
 
 Jede ordnungsgemäß einberufene Mitgliederversammlung ist beschlußfähig.
 
-Beschlüsse werden mit der einfachen Mehrheit der anwesenden Mitglieder gefaßt.
+Beschlüsse werden mit der einfachen Mehrheit der anwesenden Mitglieder gefasst,
+soweit die Satzung für den Einzelfall keine andere Regelung vorsieht.
 
-Ein Beschluß über Satzungsänderungen oder über die Auflösung des Vereins ist
+Ein Beschluss über Satzungsänderungen oder über die Auflösung des Vereins ist
 nur rechtswirksam, wenn er in der Einladung wörtlich angekündigt wurde,
 mindestens drei stimmberechtigte Mitglieder an der Abstimmung teilnehmen und
-der Beschluß mit Dreiviertelmehrheit gefaßt wird.\label{MV-Aufloesung}
+der Beschluss mit Dreiviertelmehrheit gefasst wird.\label{MV-Aufloesung}
 
 \SubParagraph{title=Abstimmungen und Wahlen}
 
@@ -386,7 +415,7 @@ unterzeichnen ist und folgende Informationen enhalten muß:
   \item Ort und Zeit der Versammlung,
   \item Name des/der Versammlungsleiters/-in und des/der Protokollführers/-in,
   \item Anzahl und Namen der erschienenen Mitglieder,
-  \item Feststellung der ordnungsgemäßen Einberufung und Beschlußfähigkeit,
+  \item Feststellung der ordnungsgemäßen Einberufung und Beschlussfähigkeit,
   \item die Tagesordnung,
   \item die gestellten Anträge, das Abstimmungsergebnis (Zahl der Ja-Stimmen,
     Nein-Stimmen, Enthaltungen und ungültigen Stimmen), die Art der
@@ -405,7 +434,7 @@ elektronischer Form (§~126a BGB) fassen, wenn alle Mitglieder mit einer
 Vorlaufzeit von zwei Wochen per E-Mail davon in Kenntnis gesetzt
 sind.\label{eBeschluss}
 
-Bekanntzugeben ist der Beschlußvorschlag mit Erläuterungen sowie der
+Bekanntzugeben ist der Beschlussvorschlag mit Erläuterungen sowie der
 Bestimmung, in welcher Form und Frist die Stimmen abzugeben sind. Nach Ablauf
 der Frist eingehende Stimmen werden nicht mehr berücksichtigt.
 
@@ -413,15 +442,15 @@ Die Abstimmung erfolgt per E-Mail an die E-Mail-Adresse des/der
 Vorstandsvorsitzenden bzw.\ des/der von ihm/ihr eingesetzten Vertreters/-in,
 oder an eine in der Auf\/forderung abweichend genannte Adresse.
 
-Über die Abstimmung ist unter Nennung des Beschlußtextes und der abgegebenen
+Über die Abstimmung ist unter Nennung des Beschlusstextes und der abgegebenen
 Stimmen vom Vorstandsvorsitzenden bzw.\ von einem eingesetzten Vertreter
 Protokoll zu führen. Das Protokoll wird vereinsöffentlich zugänglich gemacht
 und den Mitgliedern per E-Mail angezeigt.
 
 Geben alle Mitglieder Ihre Stimme bereits vor Ablauf der zweiwöchigen
 An\-kün\-di\-gungs\-frist gem.~\refParS{eBeschluss} ab und erklären sich
-zusammen mit der Stimmabgabe zur vorzeitigen Beschlußfassung bereit, gilt der
-Beschluß entsprechend der Stimmenmehrheit als gefaßt bzw. nicht gefaßt, sobald
+zusammen mit der Stimmabgabe zur vorzeitigen Beschlussfassung bereit, gilt der
+Beschluss entsprechend der Stimmenmehrheit als gefasst bzw. nicht gefasst, sobald
 die letzte Stimme eingegangen ist. Auf die vorfristige Entscheidung ist in der
 Niederschrift hinzuweisen.
 
@@ -429,27 +458,28 @@ Im Übrigen wird das Verfahren durch Vorstandsbeschluß festgelegt.
 
 \Paragraph{title=Der Vorstand}
 
-Der Vorstand besteht aus fünf Mitgliedern:
+Der Vorstand besteht aus mindestens fünf und nicht mehr als neun Mitgliedern:
 \begin{compactenum}[\hspace{2em}1.]
   \item dem/der Vorsitzenden,
-  \item dem/der stellvertretenden Vorsitzenden
+  \item dem/der stellvertretenden Vorsitzenden,
   \item dem/der Schriftführer/-in,
   \item dem/der Kassenwart/-wärtin,
-  \item dem/der stellvertretenden Kassenwart/-wärtin.
+  \item sowie mindestens einem und maximal fünf Beisitzern.
 \end{compactenum}
 
-Sind zwei oder mehr Vorstandsmitglieder dauernd an der Ausübung ihres Amtes
+Sind drei oder mehr Vorstandsmitglieder dauernd an der Ausübung ihres Amtes
 gehindert, so sind unverzüglich Nachwahlen anzuberaumen.
 
-Die Amtsdauer der Vorstandsmitglieder beträgt ein Jahr. Wiederwahl ist
-zulässig. Die jeweils amtierenden Vorstandsmitlgieder bleiben nach Ablauf
-ihrer Amtszeit im Amt, bis Nachfolger gewählt sind.
+Die Amtsdauer der Vorstandsmitglieder beträgt ein Jahr. Die Wiederwahl ist
+zulässig. Der jeweils amtierende Vorstand bleibt bis zu dem Tag im Amt, an dem
+ein neu gewählter Vorstand die Amtsgeschäfte übernimmt.
 
 Der Vorstand beschließt über alle Vereinsangelegenheiten, soweit sie nicht
 eines Beschlusses der Mitgliederversammlung bedürfen. Er führt die Beschlüsse
-der Mitgliederversammlung aus. Beschlüsse des Vorstandes müssen mit
-einfacher Mehrheit gefaßt werden. Der Vorstand ist beschlußfähig, wenn
-mindestens drei Mitglieder anwesend sind.
+der Mitgliederversammlung aus.
+
+Beschlüsse des Vorstandes müssen mit einfacher Mehrheit gefasst werden. Der
+Vorstand ist beschlußfähig, wenn mindestens drei Mitglieder anwesend sind.
 
 \SubParagraph{title=Vertretung}
 
@@ -468,21 +498,25 @@ entsprechende Handlungsvollmachten. Er/sie ist berechtigt, Zahlungsanweisungen
 entsprechend den Beschlüssen des Vorstandes oder der Mitgliederversammlung zu
 unterzeichnen.
 
-Der/die stellvertretende Kassenwart/-wärtin vertritt den/die Kassenwart/-wärtin
-auf dessen/deren Bitte hin oder in Fällen, in denen der/die Kassenwart/-wärtin
-an der Ausübung der eigenen Pflichten gehindert ist. Ihm/ihr kommen in der
-Ausübung seiner/ihrer Tätigkeit die gleichen Rechte und Pflichten zu, die auch
-der/die Kassenwart/-wärtin hat.
-
 \SubParagraph{title=Vorstandssitzungen und -beschlüsse}
 
-Der Vorstand tagt vereinsöffentlich. Vorstandssitzungen müssen in Textform
-angekündigt werden. Vereinsfremde Personen können zu Vorstandssitzungen
-zugelassen werden.
+Der Vorstand trifft sich zu regelmäßigen Sitzungen, wenn die Geschäfte es
+notwendig machen oder zwei Drittel der Vorstandsmitglieder die Einberufung
+einer Vorstandssitzung fordern. Vereinsfremde Personen können zu
+Vorstandssitzungen zugelassen werden.
 
-Die Beschlüsse sowie das Protokoll der vereinsöffentlichen Vorstandssitzung
-sind schriftlich festzuhalten und müssen innerhalb von zwei Wochen
-vereinsöffentlich zu\-gäng\-lich gemacht werden.
+Vorstandsbeschlüsse sind nach angemessener Benachrichtigung aller Mitglieder
+des Vorstandes auch ohne Vorstandssitzung zulässig, insofern kein Mitglied
+des Vorstands ausdrücklich innerhalb von 5 Tagen widerspricht.
+
+Sämtliche Vorstandssitzungen sowie sämtliche Beschlussfassungen durch
+den Vorstand sind vereinsöffentlich.
+
+Über sämtliche Vorstandssitzungen und Beschlüsse, insb. auch über jene
+Beschlüsse, die außerhalb regulärer Vorstandssitzungen getroffen werden, hat
+der Vorstand Protokolle zu führen. Die Protokolle sind innerhalb von höchstens
+zwei Wochen ab Datum der Sitzung oder des Beschlusses vereinsöffentlich
+zu\-gäng\-lich zu machen.
 
 \SubParagraph{title=Satzungsänderungsvollmacht}
 
@@ -498,7 +532,8 @@ des Vereins wahrnehmen.
 
 Die Vorstandstätigkeit wird nicht vergütet, erfolgt also ehrenamtlich.
 
-\pagebreak\enlargethispage{\textheight}
+% \pagebreak\enlargethispage{\textheight}
+
 Der Vorstand ist berechtigt, nach eigenem Ermessen insbesondere folgende
 Versicherungen auf Kosten des Vereins abzuschließen:
 \begin{compactenum}[\hspace{2em}1.]
