Fehlendes Komma eingefügt

--- a/Vereinssatzung.tex
+++ b/Vereinssatzung.tex
@@ -576,7 +576,7 @@ Vollmachten sind sofort zurückzugeben.
 
 Der Verein und seine Organe und Erfüllungs- und Verrichtungsgehilfen haften
 nicht für die vom Verein angebotenen Dienste und Informationen sowie deren
-Folgen und zwar weder für die Richtigkeit noch Vollständigkeit, noch daß sie
+Folgen, und zwar weder für die Richtigkeit noch Vollständigkeit, noch daß sie
 frei von Rechten Dritter sind oder der Nutzer rechtmäßig handelt, indem er
 Daten zugänglich macht, anbietet oder übermittelt.
 
