Klarstellung im Absatz zur Kuendigung der Mitgliedschaft

--- a/Vereinssatzung.tex
+++ b/Vereinssatzung.tex
@@ -247,9 +247,9 @@ Die Mitgliedschaft endet durch
 
 \begin{compactitem}
   \item die Austrittserklärung des Mitglieds unter Einhaltung einer Frist von
-  drei Monaten zum Ende des Kalenderjahres, wobei diese dem Vorstand in Textform
-  (z.B. mittels E-Mail, Brief oder Fax) erklärt werden muss; den Nachweis über
-  den Eingang der Kündigung beim Vorstand führt der Absender.
+  drei Monaten zum Ende des Kalenderjahres, wobei die Erklärung dem Vorstand in 
+  Textform (z.B. mittels E-Mail, Brief oder Fax) erklärt werden muss; den Nachweis 
+  über den Eingang der Kündigung beim Vorstand führt der Absender.
   \item Tod von natürlichen Personen.
   \item Auf\/lösung und Erlöschung von juristischen Personen, Handelsgesellschaften,
   nicht rechtsfähigen Vereinen sowie Anstalten und Körperschaften des öffentlichen
