--- a/Vereinssatzung.tex
+++ b/Vereinssatzung.tex
@@ -247,7 +247,7 @@ Die Mitgliedschaft endet durch
 
 \begin{compactitem}
   \item die Austrittserklärung des Mitglieds unter Einhaltung einer Frist von
-  drei Monaten zum Ende des Kalenderjahres, wobei die Erklärung dem Vorstand in 
+  drei Monaten zum Ende des Kalenderjahres, wobei der Austritt dem Vorstand in 
   Textform (z.B. mittels E-Mail, Brief oder Fax) erklärt werden muss; den Nachweis 
   über den Eingang der Kündigung beim Vorstand führt der Absender.
   \item Tod von natürlichen Personen.
