Mehr Artikel für sprachliche Gewandheit

--- a/Vereinssatzung.tex
+++ b/Vereinssatzung.tex
@@ -250,8 +250,8 @@ Die Mitgliedschaft endet durch
   drei Monaten zum Ende des Kalenderjahres, wobei der Austritt dem Vorstand in 
   Textform (z.B. mittels E-Mail, Brief oder Fax) erklärt werden muss; den Nachweis 
   über den Eingang der Kündigung beim Vorstand führt der Absender.
-  \item Tod von natürlichen Personen.
-  \item Auf\/lösung und Erlöschung von juristischen Personen, Handelsgesellschaften,
+  \item den Tod von natürlichen Personen.
+  \item die Auf\/lösung und Erlöschung von juristischen Personen, Handelsgesellschaften,
   nicht rechtsfähigen Vereinen sowie Anstalten und Körperschaften des öffentlichen
   Rechts.
   \item Ausschluss.
