Neufassung einzelner Sätze und Wörter zur besseren Klarheit

--- a/Vereinssatzung.tex
+++ b/Vereinssatzung.tex
@@ -7,6 +7,8 @@
 \usepackage{paralist}
 \usepackage{eurosym}
 \usepackage{totpages}
+\usepackage{everyshi}
+\usepackage{keyval}
 
 %\usepackage{draftwatermark}
 %\SetWatermarkText{Entwurf 2014-05-18}
@@ -156,7 +158,7 @@ Abdeckung von Unkosten von den Teilnehmern seiner Veranstaltungen einzuheben.
 
 Wenn technisch möglich stellt der Verein Video-Materialien seiner Veranstaltungen
 öf\-fent\-lich und kostenfrei zur Verfügung, um den wissenschaftlichen wie kulturellen
-Mehrwert auch über die Konferenz hinaus zu gewährleisten.
+Mehrwert auch über die Veranstaltungen hinaus zu gewährleisten.
 
 \Paragraph{title=Gemeinnützigkeit}\label{Gemeinnuetzigkeit}
 
@@ -187,7 +189,7 @@ lädt der Verein namhafte, verdienstvolle und bedürftige Teilnehmer ein und
 Verpflegungskosten.
 
 Bei Ausscheiden eines Mitgliedes aus dem Verein oder bei Vereinsauf\/lösung
-erfolgt keine Rückerstattung etwa eingebrachter Vermögenswerte.
+erfolgt keine Rückerstattung etwaig eingebrachter Vermögenswerte.
 
 Eine Änderung des Vereinszwecks darf nur innerhalb des von \ref{Zweck}
 gegebenen Rahmens erfolgen.
@@ -235,8 +237,9 @@ Die Stimmrechte aktiver Mitglieder (inkl.\ Ehrenmitglieder) werden gemäß
 keine Mehransprüche auf Vereinsleistungen gegenüber der Öffentlichkeit.
 
 Die Mitglieder sind verpflichtet, die satzungsgemäßen Zwecke des Vereins zu
-unterstützen und zu fördern. Sie sind ebenso verpflichtet, die festgesetzten
-Beiträge zu zahlen.
+unterstützen und zu fördern. Sie sind ebenso verpflichtet, die in der von der
+Mitgliederversammlung festgelegten Beitragsordnung festgesetzten Beiträge zu
+zahlen.
 
 Jedes einzelne Mitglied hat Sorge dafür zu tragen, dass dem Vorstand zu jeder
 Zeit eine zustellungsfähige Adresse des Mitglieds bekannt ist.
@@ -247,8 +250,8 @@ Die Mitgliedschaft endet durch
 
 \begin{compactitem}
   \item die Austrittserklärung des Mitglieds unter Einhaltung einer Frist von
-  drei Monaten zum Ende des Kalenderjahres, wobei der Austritt dem Vorstand in 
-  Textform (z.B. mittels E-Mail, Brief oder Fax) erklärt werden muss; den Nachweis 
+  drei Monaten zum Ende des Kalenderjahres, wobei der Austritt dem Vorstand in
+  Textform (z.B. mittels E-Mail, Brief oder Fax) erklärt werden muss; den Nachweis
   über den Eingang der Kündigung beim Vorstand führt der Absender.
   \item Tod von natürlichen Personen.
   \item Auf\/lösung und Erlöschung von juristischen Personen, Handelsgesellschaften,
